--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>1.29</version>
+        </dependency>
     </dependencies>
 
 
